Post&onpost metodu

--- a/SduDigitalForm/Pages/Index.cshtml
+++ b/SduDigitalForm/Pages/Index.cshtml
@@ -14,20 +14,20 @@
         
 
         <div class="card-body col-md-6 ">
-            <form>
+            <form method="post">
 
 
                 <div class="form-group">
                     <label>Name  :</label><br />
-                    <input type="text" class="form-control" /><br />
+                    <input type="text" class="form-control"  name="Name"/><br />
                 
                     <label>Surname :</label><br />
-                    <input type="text" class="form-control" /><br />
+                    <input type="text" class="form-control" name="Surname" /><br />
                 
 
                 
                     <label>E-mail  :</label><br />
-                    <input type="text" class="form-control" /><br />
+                    <input type="email" class="form-control" name="Email"/><br />
                 
 
                 
