--- a/SduDigitalForm/Pages/IssueRazor.cshtml
+++ b/SduDigitalForm/Pages/IssueRazor.cshtml
@@ -1,9 +1,5 @@
 ﻿@page
 @model SduDigitalForm.Pages.IssueRazorModel
-@{
 
-    <div class="col-md-10">
-        @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
-    </div>
-}
+
+    <h2>Test IssueRazor</h2>
