--- a/SduDigitalForm/Areas/TeknikServisTalepFormu/Views/Home/Index.cshtml
+++ b/SduDigitalForm/Areas/TeknikServisTalepFormu/Views/Home/Index.cshtml
@@ -1,29 +1,25 @@
 ﻿@{
     ViewData["Title"] = "Index";
     Layout = "~/Pages/Shared/_Layout.cshtml";
+    var islemSonuc = ViewData["islemSonuc"];
 }
 @using SduDigitalForm.Areas.TeknikServisTalepFormu.Models
 @model TeknikServisTalepFormuViewModel
 
 
-
 <h1>Teknik Servis Talep Formu</h1>
-
-
-
 <div class="card shadow mb-auto">
     <div class="card-header py-3">
-
         <h4>Teknik Servis Talep Formu</h4>
-
-
     </div>
-
+    @if (islemSonuc!=null) { 
+        <div class="alert alert-success">
+            <h4>@islemSonuc</h4>
+        </div>
+    }
+    
     @using (Html.BeginForm())
     {
-
-
-
 
         <div class="container-fluid card-body ">
 
@@ -117,7 +113,7 @@
             <div class="row g-3">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <button class="btn btn-success" type="submit" value="Submit">Save Form</button>
+                        <a href="/">content</a><button class="btn btn-success" type="submit" value="Submit">Save Form</button>
 
                     </div>
                 </div>
@@ -126,11 +122,23 @@
         </div>
 
 
-
-
-
-
     }
+    
+
+<table>
+    <tr>
+      
+
+        @foreach (  var item in Model.userList)
+	{
+		 <td> @item.Name  </td>
+         <td    >   @item.Surname</td>
+         
+         <td>@item.OrganizationUnitId</td>
+	}
+        
+    </tr>
+</table>
 </div>
 
 
