--- a/SduDigitalForm/Pages/Shared/_Layout.cshtml
+++ b/SduDigitalForm/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/IssueRazor">İçerik Sağlayıcı</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href  ="~/TeknikServisTalepFormu/Home">TSTF</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
