--- a/SduDigitalForm/Pages/Shared/_LoginPartial.cshtml
+++ b/SduDigitalForm/Pages/Shared/_LoginPartial.cshtml
@@ -1,12 +1,19 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using SduDigitalForm.Data.Data.Models
+@inject SignInManager<Tbl_User> SignInManager
+@inject UserManager<Tbl_User> UserManager
+
+@{
+    var currentUser = User.Identity== null || string.IsNullOrEmpty(User.Identity.Name) ? null: await UserManager.FindByEmailAsync(User.Identity.Name);
+}
 
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
+@if (SignInManager.IsSignedIn(User)) { 
+ 
+    @currentUser?.Title
+    
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name   </a>
+        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name  </a>
     </li>
     <li class="nav-item">
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post" >
